--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Brighton Bold';
+	src: url('../fonts/Brighton Bold Plain.ttf');
+}
+
 html {
 	background: url('../images/cosmos.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -10,7 +15,7 @@ html {
 	height: 100%;
 	width: 100%;
 	color: #6d8199;
-	font-family: Sans-serif;
+	font-family: 'Brighton Bold';
 }
 
 #header {
@@ -21,11 +26,11 @@ html {
 #header h1 {
 	margin: 0;
 	position: absolute;
-	top: 50%;
+	top: 75%;
 	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
-	font-size: 50px;
+	font-size: 45px;
 }
 
 .preview-panel {
