--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,7 @@
 @font-face {
 	font-family: 'Brighton Bold';
+	font-style: normal;
+	font-weight: bold;
 	src: url('../fonts/Brighton Bold Plain.ttf');
 }
 
